# PDF-Diff

./: .gitignore  README.md  install.ps1  pdf_diff.py  pyproject.toml
scripts/: install.sh
src/pdf_diff/: cli.py  comparer.py  loader.py  reporter.py
src/pdf_diff/strategies/: base.py  image.py  text.py
tests/: conftest.py  test_image_diff.py  test_loader.py
