[project]
name = "PDF-Diff"
version = "0.1.0"
description = "A CLI tool for finding duplicate pdfs using text-only SequenceMatching, Perceptual Hashing and Hybrid systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imagehash>=4.3.2",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
pdf-diff = "pdf_diff.cli:main"
